--- a/index.css
+++ b/index.css
@@ -212,6 +212,24 @@ button.login-MAil-password {
     background-color: #1d232c;
     color: #F2F4F7;
 }
+/* men products */
+.mens-section
+{
+    margin-top: 100px;
+    
+}
+.products{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+.product-mens{
+    text-align: center;
+    flex-basis: 20%;
+}
+
 
 /* media query */
 @media screen and (max-width: 600px) {
