--- a/index.css
+++ b/index.css
@@ -79,6 +79,7 @@ body {
     padding:40px;
     color: white;
     transition: 2s;
+    
 
 }
 
@@ -221,14 +222,36 @@ button.login-MAil-password {
 .products{
     display: flex;
     justify-content: space-between;
-    padding: 20px;
-    gap: 10px;
+    padding: 60px;
+    gap: 50px;
     flex-wrap: wrap;
+ 
 }
 .product-mens{
     text-align: center;
     flex-basis: 20%;
+    width: max-content;
+    height: 400px;
+    background-color: #F2F4F7;
+   border-radius: 8px;
 }
+.product-mens img{
+    padding-top: 30px;
+    
+    
+}
+.product-mens button{
+    width: 100px;
+    height: 30px;
+    border-radius: 8px;
+    font-weight: 600;
+    background: burlywood;
+    margin-top: 20px;
+    color:white;
+
+}
+
+
 
 
 /* media query */
@@ -237,6 +260,7 @@ button.login-MAil-password {
     .navbar-menu-toggle {
         display: block;
     }
+    
     .header-img{
         display: none;
     }
